source/MoorDyn2.h

/** @defgroup new_c_api The C API
 *  @{
 */

/// A mooring system instance
typedef struct __MoorDyn* MoorDyn;
/** @brief Creates a MoorDyn instance
 *
 * At the time of creating a new MoorDyn instance, the input file is read
 * and all the objects and structures are created. You must call afterwards
 * MoorDyn_Init() to compute the initial conditions
 *
 * @param infilename The input file, if either NULL or "", then
 * "Mooring/lines.txt" will be considered
 * @return The mooring instance, NULL if errors happened
 */
MoorDyn DECLDIR
MoorDyn_Create(const char* infilename);
/** @brief The same than MoorDyn_Init(), but the initial condition is not
 * computed at all.
 *
 * This is of use when you are loading a state file afterwards with
 * Moordyn_Load()
 *
 * @param system The Moordyn system
 * @param x Position vector (6 components per coupled body or cantilevered
 * rod and 3 components per pinned rod or coupled point)
 * @param xd Velocity vector (6 components per coupled body or cantilevered
 * rod and 3 components per pinned rod or coupled point)
 * @return MOORDYN_SUCESS If the mooring system is correctly initialized,
 * an error code otherwise (see @ref moordyn_errors)
 * @note MoorDyn_NCoupledDOF() can be used to know the number of components
 * required for \p x and \p xd
 */
int DECLDIR
MoorDyn_Init_NoIC(MoorDyn system, const double* x, const double* xd);
/** @brief Get a point
 * @param system The Moordyn system
 * @param c The point
 * @return The point instance, NULL if errors happened
 */
MoorDynPoint DECLDIR
MoorDyn_GetPoint(MoorDyn system, unsigned int c);
/** @brief Get the number of lines
 *
 * Remember that the first line index is 1
 * @param system The Moordyn system
 * @param n The output number of lines
 * @return MOORDYN_SUCESS If the number is successfully got, an error code
 * otherwise (see @ref moordyn_errors)
 */
int DECLDIR
MoorDyn_GetNumberLines(MoorDyn system, unsigned int* n);
/** @brief Get a line instance
 * @param system The Moordyn system
 * @param l The line identifier (from 1 to the number of lines)
 * @return The line instance, NULL if errors happened
 */
MoorDynLine DECLDIR
MoorDyn_GetLine(MoorDyn system, unsigned int l);
/** @brief Function for providing FASTv7 customary line tension quantities
 * @param system The Moordyn system
 * @param numLines The number of lines
 * @param FairHTen Allocated memory for the \p numLines horizontal forces at
 * the fairlead
 * @param FairVTen Allocated memory for the \p numLines vertical forces at
 * the fairlead
 * @param AnchHTen Allocated memory for the \p numLines horizontal forces at
 * the anchor
 * @param AnchVTen Allocated memory for the \p numLines vertical forces at
 * the anchor
 * @return MOORDYN_SUCESS If the data is correctly set, an error code
 * otherwise (see @ref moordyn_errors)
 */
int DECLDIR
MoorDyn_GetFASTtens(MoorDyn system,
                    const int* numLines,
                    float FairHTen[],
                    float FairVTen[],
                    float AnchHTen[],
                    float AnchVTen[]);
/** @brief Save the system so it can be loaded afterwards
 *
 * At the time of loading the system, it is still required to create the
 * system reading the same definition file and calling MoorDyn_Init_NoIC()
 * @param system The Moordyn system
 * @param filepath The path of the file to write
 * @return MOORDYN_SUCESS If the data is correctly set, an error code
 * otherwise (see @ref moordyn_errors)
 * @see MoorDyn_Load
 * @see MoorDyn_Init_NoIC
 */
int DECLDIR
MoorDyn_Save(MoorDyn system, const char* filepath);
/** @brief Load the system saved before
 *
 * You must still call MoorDyn_Create() and MoorDyn_Init_NoIC() before
 * calling this function
 * @param system The Moordyn system
 * @param filepath The path of the MoorDyn saved system
 * @return MOORDYN_SUCESS If the data is correctly set, an error code
 * otherwise (see @ref moordyn_errors)
 * @see MoorDyn_Save
 * @see MoorDyn_Init_NoIC
 */
int DECLDIR
MoorDyn_Load(MoorDyn system, const char* filepath);