source/Line.h

/** @addtogroup new_c_api
 *  @{
 */

/// A mooring line instance
typedef struct __MoorDynLine* MoorDynLine;