source/Point.h

/** @addtogroup new_c_api
 *  @{
 */

/// A mooring point instance
typedef struct __MoorDynPoint* MoorDynPoint;