wrappers/rust/bindings.rs

extern "C" {
    #[doc = " @brief Get a point\n @param system The Moordyn system\n @param c The point\n @return The point instance, NULL if errors happened"]
    pub fn MoorDyn_GetPoint(system: MoorDyn, c: ::std::os::raw::c_uint) -> MoorDynPoint;
}
extern "C" {
    #[doc = " @brief Get the number of lines\n\n Remember that the first line index is 1\n @param system The Moordyn system\n @param n The output number of lines\n @return MOORDYN_SUCESS If the number is successfully got, an error code\n otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetNumberLines(
        system: MoorDyn,
        n: *mut ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Get a line instance\n @param system The Moordyn system\n @param l The line identifier (from 1 to the number of lines)\n @return The line instance, NULL if errors happened"]
    pub fn MoorDyn_GetLine(system: MoorDyn, l: ::std::os::raw::c_uint) -> MoorDynLine;
}
extern "C" {
    #[doc = " @brief Function for providing FASTv7 customary line tension quantities\n @param system The Moordyn system\n @param numLines The number of lines\n @param FairHTen Allocated memory for the \\p numLines horizontal forces at\n the fairlead\n @param FairVTen Allocated memory for the \\p numLines vertical forces at\n the fairlead\n @param AnchHTen Allocated memory for the \\p numLines horizontal forces at\n the anchor\n @param AnchVTen Allocated memory for the \\p numLines vertical forces at\n the anchor\n @return MOORDYN_SUCESS If the data is correctly set, an error code\n otherwise (see @ref moordyn_errors)"]
    pub fn MoorDyn_GetFASTtens(
        system: MoorDyn,
        numLines: *const ::std::os::raw::c_int,
        FairHTen: *mut f32,
        FairVTen: *mut f32,
        AnchHTen: *mut f32,
        AnchVTen: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Save the system so it can be loaded afterwards\n\n At the time of loading the system, it is still required to create the\n system reading the same definition file and calling MoorDyn_Init_NoIC()\n @param system The Moordyn system\n @param filepath The path of the file to write\n @return MOORDYN_SUCESS If the data is correctly set, an error code\n otherwise (see @ref moordyn_errors)\n @see MoorDyn_Load\n @see MoorDyn_Init_NoIC"]
    pub fn MoorDyn_Save(
        system: MoorDyn,
        filepath: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Load the system saved before\n\n You must still call MoorDyn_Create() and MoorDyn_Init_NoIC() before\n calling this function\n @param system The Moordyn system\n @param filepath The path of the MoorDyn saved system\n @return MOORDYN_SUCESS If the data is correctly set, an error code\n otherwise (see @ref moordyn_errors)\n @see MoorDyn_Save\n @see MoorDyn_Init_NoIC"]
    pub fn MoorDyn_Load(
        system: MoorDyn,
        filepath: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
